# pyuepak

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
src/pyuepak/: __init__.py  cli.py  entry.py  file_io.py  footer.py  index.py  oodle.py  pak.py  utils.py  version.py
tests/: test_all.py
